syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";

option go_package = "api/grpc/v1/contract;contract_grpc_service";

// Enum for ContractStatus
enum ContractStatus {
  DRAFT = 0;
  LIVE = 1;
  ENDED = 2;
}

// Enum for RenewalCycle
enum RenewalCycle {
  NONE = 0;
  MONTHLY_RENEWAL = 1;
  ANNUALLY_RENEWAL = 2;
}

// CreateContract request message
message CreateContractGrpcRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string organizationId = 3;
  string name = 4;
  string createdByUserId = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  google.protobuf.Timestamp serviceStartedAt = 8;
  google.protobuf.Timestamp signedAt = 9;
  RenewalCycle renewalCycle = 10;
  SourceFields sourceFields = 12;
  ExternalSystemFields externalSystemFields = 13;
}

// Contract response message
message ContractIdGrpcResponse {
  string id = 1;
}

// Service definition
service ContractGrpcService {
  rpc CreateContract(CreateContractGrpcRequest) returns (ContractIdGrpcResponse);
}